# docs/swagger.json
@@ -760,6 +760,30 @@
             }
         },
         "/reviews": {
+            "get": {
+                "description": "Get all reviews without authentication",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "reviews"
+                ],
+                "summary": "Get all reviews",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/models.Review"
+                            }
+                        }
+                    }
+                }
+            },
             "post": {
                 "security": [
                     {
@@ -905,11 +929,6 @@
         },
         "/reviews/{phone_id}": {
             "get": {
-                "security": [
-                    {
-                        "ApiKeyAuth": []
-                    }
-                ],
                 "description": "Get reviews by phone ID",
                 "consumes": [
                     "application/json"
@@ -922,13 +941,6 @@
                 ],
                 "summary": "Get reviews by phone ID",
                 "parameters": [
-                    {
-                        "type": "string",
-                        "description": "JWT Authorization header",
-                        "name": "Authorization",
-                        "in": "header",
-                        "required": true
-                    },
                     {
                         "type": "integer",
                         "description": "Phone ID",
